--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <span>Plâncton do pacífico (importado) marinado</span>
         <span>$ 19,99</span>
       </article>
-      <h3>Bebes</h3>
+      <h3>Bebidas</h3>
       <article>
         <span>Água temperada</span>
         <span>(cortesia)</span>
@@ -70,11 +70,9 @@
       <img src="images/cartoes.png" alt="Bandeiras dos cartões Visa e Mastercard">
     </footer>
   </div>
-  <!--
   <aside id="ticket">
     <img src="images/ticket.png" alt="Cupom de desconto">
   </aside>
-  -->
 </body>
 
 </html>
